# ical-bday-server

./: .gitignore  README.md
server/: .gitignore  Cargo.toml  people.csv
server/src/: main.rs
server/src/http_api/: api.rs  http_server.rs  mod.rs
