[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum_static = "1.7.1"
chrono = "0.4.38"
csv = "1.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
